--- a/dog.html
+++ b/dog.html
@@ -613,7 +613,7 @@
     <div class="wet-product" data-id="o3" data-title="Handmade Dog Sweater, Cozy Knitted Pet Clothing"
       data-price="6000">
       <div class="img-box"><img src="Handmade Dog Sweater,Cozy Knitted Pet Clothing.png" alt=""></div>
-      <h3 class="wet-title">Handmade Dog Sweater, Cozy Knitted Wear</h3>
+      <h3 class="wet-title">Handmade Dog Sweater,Knitted Wear</h3>
       <div class="price-and-cart">
         <p class="price">₦6,000</p>
         <button class="add-cart">Add to Cart</button>
