--- a/shop.html
+++ b/shop.html
@@ -134,7 +134,7 @@
         <a href="prescription.html" class="E-item"><img src="precribption.jpg">
           <p>Prescription food</p>
         </a>
-        <a href="premium.html" class="E-item"><img src="premium.jpg">
+        <a href="premium.html" class="E-item"><img src="premuim.png">
           <p>Premium food</p>
         </a>
         <a href="fresh.html" class="E-item"><img src="fresh food.jpg">
