--- a/consult.html
+++ b/consult.html
@@ -4,29 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VetCare Center</title>
-
-    <!-- ICON LIBRARIES -->
     <script src="https://kit.fontawesome.com/31db87b217.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <!-- TOP BAR -->
     <div class="top-bar">
         <div class="top-left">
             <img src="logo-removebg-preview (1).png" alt="VetCare Logo" class="small-logo">
             <h1>VetCare Center</h1>
         </div>
 
-        <!-- MOBILE MENU BUTTON -->
         <div class="menu-btn" id="menuBtn">
             <i class="fa-solid fa-bars"></i>
         </div>
 
-        <!-- DESKTOP MENU -->
         <div class="top-right" id="desktopMenu">
 
             <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
@@ -57,10 +50,8 @@
         </div>
     </div>
 
-    <!-- MOBILE SLIDE-IN MENU -->
     <div class="mobile-menu" id="mobileMenu">
 
-        <!-- CART IN MOBILE -->
 
         <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
 
@@ -89,14 +80,12 @@
 
     </div>
 
-    <!-- MAIN HEADER (SEARCH + ICONS) -->
     <header class="main-header">
         <div class="search-area">
             <div class="search-bar">
                 <input type="text" id="searchInput" placeholder="Search for animals, food, or accessories...">
                 <button id="searchBtn"><i class="ri-search-line"></i></button>
             </div>
-            <!-- CART - note the id used by JS -->
             <div class="cart" id="cartIcon" title="Open cart">
                 <i class="ri-shopping-cart-line"></i>
                 <span class="cart-count" id="cartCount">0</span>
@@ -104,7 +93,6 @@
         </div>
     </header>
 
-    <!-- HERO SLIDER SECTION -->
     <section class="home" id="home">
         <div class="content">
             <h3>24/7 vetcare centre</h3>
@@ -118,7 +106,6 @@
 
     <main class="hero">
         <div class="wrap">
-            <!-- LEFT: Phone mockup (HTML chat UI) -->
             <section class="left">
                 <div class="phone">
                     <header class="phone-header">
@@ -130,7 +117,6 @@
                         <button class="end">End Chat</button>
                     </header>
 
-                    <!-- add class .animate to trigger animations -->
                     <div class="chat animate" aria-live="polite">
 
                         <div class="time" style="--d:0s">Today • 9:40 PM</div>
@@ -157,7 +143,6 @@
                                 Clancy the help he needs.</div>
                         </div>
 
-                        <!-- typing indicator shows before final incoming bubble -->
                         <div class="typing" aria-hidden="true" style="--d:1.38s">
                             <span></span><span></span><span></span>
                         </div>
@@ -172,7 +157,6 @@
                 </div>
             </section>
 
-            <!-- RIGHT: Copy + CTA -->
             <aside class="right">
                 <h1><span class="strong">Free online vet chat</span> for quick<br class="hide-sm" /> advice</h1>
 
@@ -197,7 +181,6 @@
 
 
 
-    <!-- VET LIST SECTION -->
     <section class="vets">
         <h2>Access our Expert Vets</h2>
 
@@ -341,12 +324,10 @@
 
     <section class="pet-issues-section">
 
-        <!-- LEFT SECTION -->
         <div class="issues-left">
             <div class="issues-image-box">
                 <img src="main-pet.jpg" alt="Pets" class="main-pet-img">
 
-                <!-- Issue tags (exact positions like screenshot) -->
                 <div class="issue-tag shedding">
                     <i class="fa-solid fa-bore-hole"></i>
                     <span>Shedding</span>
@@ -365,7 +346,6 @@
             </div>
         </div>
 
-        <!-- RIGHT SECTION -->
         <div class="issues-right">
             <h3>Explore solutions by our experts</h3>
 
@@ -497,7 +477,6 @@
 
         </div>
     </section>
-    <!-- ========= SLIDE-OUT CART (INSERTED) ========= -->
     <div class="cart-overlay" id="cartOverlay"></div>
 
     <aside class="slide-cart" id="cartPanel" aria-hidden="true">
@@ -507,7 +486,6 @@
         </div>
 
         <div class="cart-items" id="cartItems">
-            <!-- JS will inject cart items here -->
         </div>
 
         <div class="cart-footer">
@@ -606,7 +584,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>Copyright © 2025 PetSmart LLC</p>
+            <p>Copyright © 2025 VetCare</p>
             <div class="bottom-links">
                 <a href="#">Recalls</a>
                 <a href="#">Terms of Use</a>
