--- a/pharmacy.html
+++ b/pharmacy.html
@@ -5,8 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VetCare Center</title>
-
-  <!-- ICON LIBRARIES -->
   <script src="https://kit.fontawesome.com/31db87b217.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -15,19 +13,16 @@
 
 <body>
 
-  <!-- TOP BAR -->
   <div class="top-bar">
     <div class="top-left">
       <img src="logo-removebg-preview (1).png" alt="VetCare Logo" class="small-logo">
       <h1>VetCare Center</h1>
     </div>
 
-    <!-- MOBILE MENU BUTTON -->
     <div class="menu-btn" id="menuBtn">
       <i class="fa-solid fa-bars"></i>
     </div>
 
-    <!-- DESKTOP MENU -->
     <div class="top-right" id="desktopMenu">
 
       <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
@@ -58,10 +53,7 @@
     </div>
   </div>
 
-  <!-- MOBILE SLIDE-IN MENU -->
   <div class="mobile-menu" id="mobileMenu">
-
-    <!-- CART IN MOBILE -->
 
     <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
 
@@ -90,14 +82,12 @@
 
   </div>
 
-  <!-- MAIN HEADER (SEARCH + ICONS) -->
   <header class="main-header">
     <div class="search-area">
       <div class="search-bar">
         <input type="text" id="searchInput" placeholder="Search for animals, food, or accessories...">
         <button id="searchBtn"><i class="ri-search-line"></i></button>
       </div>
-     <!-- CART - note the id used by JS -->
       <div class="cart" id="cartIcon" title="Open cart">
         <i class="ri-shopping-cart-line"></i>
         <span class="cart-count" id="cartCount">0</span>
@@ -156,7 +146,6 @@
             </div>
         </section>
 
-<!-- ================= PRESCRIPTION DIETS ================= -->
 <section class="category">
     <h2>Never Miss a Dose</h2>
 </section>
@@ -244,7 +233,6 @@
             <h1>Pay less, care more</h1>
         </section>
 
-<!-- ================= VETERINARY PRODUCTS ================= -->
 <section class="category">
     <h2 class="section-title">Veterinary Products</h2>
 </section>
@@ -342,7 +330,6 @@
 </div>
 
 
-<!-- ================= SUPPLEMENTS & HEALTH PRODUCTS ================= -->
 <section class="category">
   <h2 class="section-title">Supplements & Health Products</h2>
 </section>
@@ -439,7 +426,6 @@
     </div>
 </div>
 
-<!-- ========= SLIDE-OUT CART (INSERTED) ========= -->
   <div class="cart-overlay" id="cartOverlay"></div>
 
   <aside class="slide-cart" id="cartPanel" aria-hidden="true">
@@ -449,7 +435,6 @@
     </div>
 
     <div class="cart-items" id="cartItems">
-      <!-- JS will inject cart items here -->
     </div>
 
     <div class="cart-footer">
@@ -472,9 +457,6 @@
         <section class="super">
             <h1>Super care with superkits</h1>
         </section>
-
-
-        <!-- PRODUCT SCROLLER -->
         <section class="superkit-section">
             <div class="superkit-scroll">
 
@@ -513,7 +495,6 @@
         </section>
 
 
-        <!-- SUPPLEMENT CORNER -->
         <section class="supplement-corner">
             <h2>Supplement corner</h2>
         
@@ -555,7 +536,6 @@
             </section>
         </section>
 
-        <!-------------Health & Hygiene-------->
         <section class="health-corner">
             <h2>Health & Hygiene</h2>
 
@@ -637,7 +617,6 @@
 
          
 
-           <!-- Search Results -->
   <section id="searchResults" class="results hidden">
     <h3>Search Results</h3>
     <ul id="resultList"></ul>
@@ -717,7 +696,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>Copyright © 2025 PetSmart LLC</p>
+            <p>Copyright © 2025 VetCare</p>
             <div class="bottom-links">
                 <a href="#">Recalls</a>
                 <a href="#">Terms of Use</a>
