--- a/shop.html
+++ b/shop.html
@@ -4,8 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VetCare Center</title>
-
-  <!-- ICON LIBRARIES -->
   <script src="https://kit.fontawesome.com/31db87b217.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -14,19 +12,16 @@
 
 <body>
 
-  <!-- TOP BAR -->
   <div class="top-bar">
     <div class="top-left">
       <img src="logo-removebg-preview (1).png" alt="VetCare Logo" class="small-logo">
       <h1>VetCare Center</h1>
     </div>
 
-    <!-- MOBILE MENU BUTTON -->
     <div class="menu-btn" id="menuBtn">
       <i class="fa-solid fa-bars"></i>
     </div>
 
-    <!-- DESKTOP MENU -->
     <div class="top-right" id="desktopMenu">
 
       <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
@@ -57,10 +52,7 @@
     </div>
   </div>
 
-  <!-- MOBILE SLIDE-IN MENU -->
   <div class="mobile-menu" id="mobileMenu">
-
-    <!-- CART IN MOBILE -->
 
     <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
 
@@ -89,14 +81,12 @@
 
   </div>
 
-  <!-- MAIN HEADER (SEARCH + ICONS) -->
   <header class="main-header">
     <div class="search-area">
       <div class="search-bar">
         <input type="text" id="searchInput" placeholder="Search for animals, food, or accessories...">
         <button id="searchBtn"><i class="ri-search-line"></i></button>
       </div>
-     <!-- CART - note the id used by JS -->
       <div class="cart" id="cartIcon" title="Open cart">
         <i class="ri-shopping-cart-line"></i>
         <span class="cart-count" id="cartCount">0</span>
@@ -174,7 +164,6 @@
 
 <main class="s-sale">
     <section class="product-columns" aria-label="Products overview">
-      <!-- Column: Top Selling -->
       <div class="col">
         <h2 class="col-title">Top Selling Products</h2>
         <ul class="product-list" aria-label="Top selling products">
@@ -204,7 +193,6 @@
         </ul>
       </div>
 
-      <!-- Column: On-sale -->
       <div class="col">
         <h2 class="col-title">On-sale Products</h2>
         <ul class="product-list" aria-label="On sale products">
@@ -234,7 +222,6 @@
         </ul>
       </div>
 
-      <!-- Column: Featured -->
       <div class="col">
         <h2 class="col-title">Featured Products</h2>
         <ul class="product-list" aria-label="Featured products">
@@ -305,7 +292,6 @@
       </div>
     </div>
 
-               <!-- Search Results -->
   <section id="searchResults" class="results hidden">
     <h3>Search Results</h3>
     <ul id="resultList"></ul>
@@ -383,7 +369,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>Copyright © 2025 PetSmart LLC</p>
+        <p>Copyright © 2025 VetCare</p>
         <div class="bottom-links">
           <a href="#">Recalls</a>
           <a href="#">Terms of Use</a>
@@ -397,7 +383,6 @@
     </footer>
     </section>
 
-      <!-- ========= SLIDE-OUT CART (INSERTED) ========= -->
   <div class="cart-overlay" id="cartOverlay"></div>
 
   <aside class="slide-cart" id="cartPanel" aria-hidden="true">
@@ -407,7 +392,6 @@
     </div>
 
     <div class="cart-items" id="cartItems">
-      <!-- JS will inject cart items here -->
     </div>
 
     <div class="cart-footer">
