--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VetCare Center</title>
-
-  <!-- ICON LIBRARIES -->
   <script src="https://kit.fontawesome.com/31db87b217.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <!-- TOP BAR -->
   <div class="top-bar">
     <div class="top-left">
       <img src="logo-removebg-preview (1).png" alt="VetCare Logo" class="small-logo">
       <h1>VetCare Center</h1>
     </div>
 
-    <!-- MOBILE MENU BUTTON -->
     <div class="menu-btn" id="menuBtn">
       <i class="fa-solid fa-bars"></i>
     </div>
 
-    <!-- DESKTOP MENU -->
     <div class="top-right" id="desktopMenu">
 
       <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
@@ -58,10 +51,8 @@
     </div>
   </div>
 
-  <!-- MOBILE SLIDE-IN MENU -->
   <div class="mobile-menu" id="mobileMenu">
 
-    <!-- CART IN MOBILE -->
 
     <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
 
@@ -90,14 +81,12 @@
 
   </div>
 
-  <!-- MAIN HEADER (SEARCH + ICONS) -->
   <header class="main-header">
     <div class="search-area">
       <div class="search-bar">
         <input type="text" id="searchInput" placeholder="Search for animals, food, or accessories...">
         <button id="searchBtn"><i class="ri-search-line"></i></button>
       </div>
-     <!-- CART - note the id used by JS -->
       <div class="cart" id="cartIcon" title="Open cart">
         <i class="ri-shopping-cart-line"></i>
         <span class="cart-count" id="cartCount">0</span>
@@ -105,7 +94,6 @@
     </div>
   </header>
 
-   <!-- Search Results -->
   <section id="searchResults" class="results hidden">
     <h3>Search Results</h3>
     <ul id="resultList"></ul>
@@ -113,7 +101,6 @@
 
   <main class="page">
     
-    <!-- CONTACT TOP -->
     <section class="contact-top">
       <h1>Contact us</h1>
 
@@ -132,7 +119,6 @@
     </section>
 
 
-    <!-- QUICK LINKS -->
     <section class="quick-links">
       <h2>Quick links</h2>
 
@@ -175,7 +161,6 @@
     </section>
 
 
-    <!-- BROWSE TOPICS -->
     <section class="browse-topics">
       <h2>Browse Topics</h2>
 
@@ -189,19 +174,17 @@
     </section>
 
 
-    <!-- GET IN TOUCH -->
     <section class="get-in-touch">
       <h2>Get in touch</h2>
       <p class="sub">If you have any inquiries, feel free to</p>
 
       <ul class="contact-list">
         <li><span class="contact-icon">📞</span> Call us at <strong>1800-5723-575</strong></li>
-        <li><span class="contact-icon">✉️</span> Email us at <strong>support@supertails.com</strong></li>
+        <li><span class="contact-icon">✉️</span> Email us at <strong>support@vetcare.com</strong></li>
       </ul>
     </section>
 
 
-    <!-- BECOME A SELLER -->
     <section class="become-seller">
       <h2 class="be">Become a seller</h2>
       <div class="seller-row">
@@ -251,7 +234,6 @@
         </div>
     </div>
 
-    <!-- MAIN FOOTER -->
     <div class="footer-main">
 
         <div class="f-col">
@@ -265,7 +247,7 @@
 
         <div class="f-col">
             <h3>EXPLORE</h3>
-            <a href="consult.html">Supertails+ Clinic</a>
+            <a href="consult.html">Vetcare+ Clinic</a>
             <a href="consult.html">At Home Vet Services</a>
             <a href="about.html">Our story</a>
             <a href="contact.html">FAQs</a>
@@ -302,7 +284,7 @@
 
             <h3>GET IN TOUCH</h3>
             <p><i class="ri-phone-line"></i> 1800-5723-575</p>
-            <p><i class="ri-mail-line"></i> support@supertails.com</p>
+            <p><i class="ri-mail-line"></i> support@vetcare.com</p>
         </div>
 
     </div>
@@ -310,7 +292,6 @@
 </footer>
 
 
-  <!-- ========= SLIDE-OUT CART (INSERTED) ========= -->
   <div class="cart-overlay" id="cartOverlay"></div>
 
   <aside class="slide-cart" id="cartPanel" aria-hidden="true">
@@ -320,7 +301,6 @@
     </div>
 
     <div class="cart-items" id="cartItems">
-      <!-- JS will inject cart items here -->
     </div>
 
     <div class="cart-footer">
