--- a/index.html
+++ b/index.html
@@ -5,33 +5,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VetCare Center</title>
-
-  <!-- ICON LIBRARIES -->
   <script src="https://kit.fontawesome.com/31db87b217.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-  <!-- TOP BAR -->
   <div class="top-bar">
     <div class="top-left">
       <img src="logo-removebg-preview (1).png" alt="VetCare Logo" class="small-logo">
       <h1>VetCare Center</h1>
     </div>
-
-    <!-- MOBILE MENU BUTTON -->
     <div class="menu-btn" id="menuBtn">
       <i class="fa-solid fa-bars"></i>
     </div>
-
-    <!-- DESKTOP MENU -->
     <div class="top-right" id="desktopMenu">
-
       <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
-
       <div class="dropdown">
         <a href="shop.html"><i class="ri-shopping-bag-3-line"></i> Shop</a>
         <div class="dropdown-content">
@@ -57,12 +45,7 @@
 
     </div>
   </div>
-
-  <!-- MOBILE SLIDE-IN MENU -->
   <div class="mobile-menu" id="mobileMenu">
-
-    <!-- CART IN MOBILE -->
-
     <a href="index.html"><i class="ri-home-4-line"></i> Home</a>
 
     <div class="mobile-dropdown">
@@ -89,15 +72,12 @@
     <a href="about.html"><i class="ri-information-line"></i> About Us</a>
 
   </div>
-
-  <!-- MAIN HEADER (SEARCH + ICONS) -->
   <header class="main-header">
     <div class="search-area">
       <div class="search-bar">
         <input type="text" id="searchInput" placeholder="Search for animals, food, or accessories...">
         <button id="searchBtn"><i class="ri-search-line"></i></button>
       </div>
-      <!-- CART - note the id used by JS -->
       <div class="cart" id="cartIcon" title="Open cart">
         <i class="ri-shopping-cart-line"></i>
         <span class="cart-count" id="cartCount">0</span>
@@ -105,7 +85,6 @@
     </div>
   </header>
 
-  <!-- Banner Slider Section -->
   <section class="banner-slider">
     <div class="slide active" style="background-image: url('slide\ 1.jpg');">
       <div class="banner-content">
@@ -139,7 +118,6 @@
       </div>
     </div>
 
-    <!-- Slide 6 -->
     <div class="slide" style="background-image: url('slide\ 6.jpg');">
       <div class="banner-content">
         <h2>Quality Pet Supplies</h2>
@@ -149,9 +127,6 @@
     </div>
   </section>
 
-  <!-- Search Results -->
-
-
   <section class="shop for-section">
     <h2>Shop for</h2>
 
@@ -159,8 +134,6 @@
       <button class="petstab-btn active" data-target="#allPets">All pet types</button>
       <button class="petstab-btn" data-target="#myPets">My pets</button>
     </div>
-
-    <!-- All Pet Types -->
     <div id="allPets" class="tab-content active">
       <div class="circle-items">
         <div class="item"><a href="pharmacy.html"><img src="dog.png"></a>
@@ -181,7 +154,6 @@
       </div>
     </div>
 
-    <!-- My Pets -->
     <div id="myPets" class="tab-content">
       <div class="my-pets-box">
         <div class="pet-icons">
@@ -194,10 +166,6 @@
       </div>
     </div>
   </section>
-  <!-- ========================= -->
-  <!-- LOTS TO LOVE SECTION -->
-  <!-- (3rd image content) -->
-  <!-- ========================= -->
 
   <section class="learn-section">
     <h2>Lots to love. Lots to learn.</h2>
@@ -245,7 +213,6 @@
 
     <div class="services-row">
 
-      <!-- CARD 1 -->
       <div class="service-card">
         <img src="home vet consult.jpg" alt="">
         <h3>At Home Vet consultation</h3>
@@ -256,7 +223,6 @@
         <a href="consult.html"><button>Book now</button></a>
       </div>
 
-      <!-- CARD 2 -->
       <div class="service-card">
         <img src="vaccination.jpg" alt="">
         <h3>Vaccination</h3>
@@ -267,7 +233,6 @@
         <a href="consult.html"><button>Book now</button></a>
       </div>
 
-      <!-- CARD 3 -->
       <div class="service-card">
         <img src="vet consultation.jpg" alt="">
         <h3>Vet consultation</h3>
@@ -278,7 +243,6 @@
         <a href="consult.html"><button>Book now</button></a>
       </div>
 
-      <!-- CARD 4 -->
       <div class="service-card">
         <img src="diagnostics.jpg" alt="">
         <h3>Diagnostics</h3>
@@ -293,8 +257,6 @@
   </div>
 
   <footer class="footer">
-
-    <!-- TOP HIGHLIGHT BAR -->
     <div class="footer-top">
       <div class="ft-item">
         <i class="ri-truck-line"></i>
@@ -328,8 +290,6 @@
         </div>
       </div>
     </div>
-
-    <!-- MAIN FOOTER -->
     <div class="footer-main">
 
       <div class="f-col">
@@ -343,7 +303,7 @@
 
       <div class="f-col">
         <h3>EXPLORE</h3>
-        <a href="consult.html">Supertails+ Clinic</a>
+        <a href="consult.html">VetCare+ Clinic</a>
         <a href="consult.html">At Home Vet Services</a>
         <a href="about.html">Our story</a>
         <a href="contact.html">FAQs</a>
@@ -380,15 +340,13 @@
 
         <h3>GET IN TOUCH</h3>
         <p><i class="ri-phone-line"></i> 1800-5723-575</p>
-        <p><i class="ri-mail-line"></i> support@supertails.com</p>
+        <p><i class="ri-mail-line"></i> support@vetcare.com</p>
       </div>
 
     </div>
 
   </footer>
 
-
-  <!-- ========= SLIDE-OUT CART (INSERTED) ========= -->
   <div class="cart-overlay" id="cartOverlay"></div>
 
   <aside class="slide-cart" id="cartPanel" aria-hidden="true">
@@ -398,7 +356,6 @@
     </div>
 
     <div class="cart-items" id="cartItems">
-      <!-- JS will inject cart items here -->
     </div>
 
     <div class="cart-footer">
